portfolio_website.html

--- a/portfolio_website.html
+++ b/portfolio_website.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shourya's Portfolio</title>
+    <link rel="stylesheet" href="style_portfolio.css">
 </head>
+
 <body>
     <div class="sidebar">
+        <div class="nav_buttons">
+        </div>
+        <div class="max_but"></div>
+        <div class="min_but"></div>
         <div class="dp">
 
         </div>
         <div class="about_me">
-
+            About Me
         </div>
         <div class="skills">
-
+            Skills
         </div>
         <div class="projects">
-
+            Projects
         </div>
         <div class="contact_me">
-            
+            Contact me
         </div>
     </div>
-    
+    <div class="main_body">
+        <div class="name">
+            Shourya Singh
+        </div>
+        <br>
+        <div class="degree">
+            B.Tech IT 1st Year
+        </div>
+        <br>
+        <br>
+        <div class="introduction">
+            <h1>About Me</h1>
+            Aspiring software engineer skilled in C++, Python, HTML, CSS, and Dart, with a strong foundation in data
+            structures and algorithms. Passionate about building efficient, scalable solutions and exploring creative
+            tech through video editing, motion graphics, and 3D modeling. Eager to contribute to impactful development 
+            projects and gain real-world experience.
+        </div>
+    </div>
+
 </body>
+
 </html>
