Added new images and updated styles/content

--- a/index.html
+++ b/index.html
@@ -47,6 +47,57 @@
             structures and algorithms. Passionate about building efficient, scalable solutions and exploring creative
             tech through video editing, motion graphics, and 3D modeling. Eager to contribute to impactful development 
             projects and gain real-world experience
+            <h2>Skills</h2>
+            <div class="cards">
+                <div class="card1">
+                    <div class="html_logo"><br>
+                        <div class="html_name"><h2>HTML</h2></div>
+                    </div>
+                </div>
+                <div class="card2">
+                    <div class="css_logo">
+                        <br>
+                        <div class="css_name">
+                            <h2>CSS</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="card3">
+                    <div class="cpp_logo">
+                        <br>
+                        <div class="cpp_name">
+                            <h2>C++</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="cards2">
+                <div class="card4">
+                    <div class="dart_logo">
+                        <br>
+                        <div class="dart_name">
+                            <h2>Dart</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="card5">
+                    <div class="flutter_logo">
+                        <br>
+                        <div class="flutter_name">
+                            <h2>Flutter</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="card6">
+                    <div class="python_logo">
+                        <br>
+                        <div class="python_name">
+                            <h2>Python</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
