Add blurred quarter sun background at top-right corner

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <br>
         <div class="introduction">
             <h2>About Me</h2>
-            Aspiring software engineer skilled in C++, Python, HTML, CSS, and Dart, with a strong foundation in data
+            <p>Aspiring software engineer skilled in C++, Python, HTML, CSS, and Dart, with a strong foundation in data
             structures and algorithms. Passionate about building efficient, scalable solutions and exploring creative
             tech through video editing, motion graphics, and 3D modeling. Eager to contribute to impactful development 
-            projects and gain real-world experience
+            projects and gain real-world experience </p>
             <h2>Skills</h2>
             <div class="cards">
                 <div class="card1">
