Add blurred quarter sun background at top-right corner

--- a/index.html
+++ b/index.html
@@ -35,23 +35,32 @@
         <div class="name">
             Shourya Singh
         </div>
-        <br>
+        <!-- <br> -->
         <div class="degree">
-            B.Tech IT 1st Year
+            Aspiring Developer | B.Tech - IT 2<sup>nd</sup> Year
         </div>
         <br>
         <br>
         <div class="introduction">
             <h2>About Me</h2>
-            <p>Aspiring software engineer skilled in C++, Python, HTML, CSS, and Dart, with a strong foundation in data
-            structures and algorithms. Passionate about building efficient, scalable solutions and exploring creative
-            tech through video editing, motion graphics, and 3D modeling. Eager to contribute to impactful development 
-            projects and gain real-world experience </p>
+            <p>
+                I'm an aspiring software engineer with a growing skill set in C++, Python, HTML, CSS, and Dart.
+                I have a solid foundation in data structures and algorithms, and enjoy building clean, scalable,
+                and efficient solutions to real-world problems.
+                <br><br>
+                Alongside development, I explore creative areas like video editing, motion graphics, and 3D modeling,
+                which help me bring a fresh perspective to tech projects. I'm eager to contribute to meaningful work,
+                collaborate with others, and keep learning along the way.
+            </p>
             <h2>Skills</h2>
+
+
             <div class="cards">
                 <div class="card1">
                     <div class="html_logo"><br>
-                        <div class="html_name"><h2>HTML</h2></div>
+                        <div class="html_name">
+                            <h2>HTML</h2>
+                        </div>
                     </div>
                 </div>
                 <div class="card2">
