Add blurred quarter sun background at top-right corner

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 collaborate with others, and keep learning along the way.
             </p>
             <h2>Skills</h2>
+            <h3>Development | Web and App </h3>
+            <br>
 
 
             <div class="cards">
@@ -72,16 +74,13 @@
                     </div>
                 </div>
                 <div class="card3">
-                    <div class="cpp_logo">
+                    <div class="flutter_logo">
                         <br>
-                        <div class="cpp_name">
-                            <h2>C++</h2>
+                        <div class="flutter_name">
+                            <h2>Flutter</h2>
                         </div>
                     </div>
                 </div>
-            </div>
-            <br>
-            <div class="cards2">
                 <div class="card4">
                     <div class="dart_logo">
                         <br>
@@ -90,11 +89,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <br>
+            <div class="cards2">
+                
                 <div class="card5">
-                    <div class="flutter_logo">
+                    <div class="cpp_logo">
                         <br>
-                        <div class="flutter_name">
-                            <h2>Flutter</h2>
+                        <div class="cpp_name">
+                            <h2>C++</h2>
                         </div>
                     </div>
                 </div>
