--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
             <h2>Skills</h2>
             <h3>Development | Web and App </h3>
             <br>
-
-
             <div class="cards">
                 <div class="card1">
                     <div class="html_logo"><br>
@@ -91,6 +89,7 @@
                 </div>
             </div>
             <br>
+            <h3>Programming</h3>
             <div class="cards2">
                 
                 <div class="card5">
@@ -102,6 +101,14 @@
                     </div>
                 </div>
                 <div class="card6">
+                    <div class="c_logo">
+                        <br>
+                        <div class="c_name">
+                            <h2>C</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="card7">
                     <div class="python_logo">
                         <br>
                         <div class="python_name">
@@ -109,8 +116,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="card8">
+                    <div class="js_logo">
+                        <br>
+                        <div class="js_name">
+                            <h2>JS</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
             <br>
+            <h3>Design | VFX & 3D </h3>
         </div>
     </div>
 
