--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <div class="contact_me">
             Contact me
         </div>
+        <div class="sm_logo">
+            <div class="github_logo">
+            </div>
+            <div class="linkedin_logo">
+            </div>
+            <div class="x_logo">
+            </div>
+        </div>
     </div>
     <div class="main_body">
         <div class="name">
