--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="card1">
                     <div class="html_logo"><br>
                         <div class="html_name">
-                            <h2>HTML</h2>
+                            HTML
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <div class="css_logo">
                         <br>
                         <div class="css_name">
-                            <h2>CSS</h2>
+                            CSS
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <div class="flutter_logo">
                         <br>
                         <div class="flutter_name">
-                            <h2>Flutter</h2>
+                            Flutter
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="dart_logo">
                         <br>
                         <div class="dart_name">
-                            <h2>Dart</h2>
+                            Dart
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class="cpp_logo">
                         <br>
                         <div class="cpp_name">
-                            <h2>C++</h2>
+                            C++
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                     <div class="c_logo">
                         <br>
                         <div class="c_name">
-                            <h2>C</h2>
+                            C
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="python_logo">
                         <br>
                         <div class="python_name">
-                            <h2>Python</h2>
+                            Python
                         </div>
                     </div>
                 </div>
@@ -128,13 +128,48 @@
                     <div class="js_logo">
                         <br>
                         <div class="js_name">
-                            <h2>JS</h2>
+                            JS
                         </div>
                     </div>
                 </div>
             </div>
             <br>
             <h3>Design | VFX & 3D </h3>
+             <div class="cards3">
+                <div class="card9">
+                    <div class="ae_logo"><br>
+                        <div class="ae_name">
+                            After Effects
+                        </div>
+                    </div>
+                </div>
+                <div class="card10">
+                    <div class="pr_logo">
+                        <br>
+                        <div class="pr_name">
+                            Figma
+                        </div>
+                    </div>
+                </div>
+                <div class="card11">
+                    <div class="ps_logo">
+                        <br>
+                        <div class="ps_name">
+                            Photoshop
+                        </div>
+                    </div>
+                </div>
+                <div class="card12">
+                    <div class="blender_logo">
+                        <br>
+                        <div class="blender_name">
+                            Blender
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <h2>Projects</h2>
         </div>
     </div>
 
