--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <br>
         <br>
         <div class="introduction">
-            <h2>About Me</h2>
+           <div class="abt_me_sec"><h2>About Me</h2>
             <p>
                 I'm an aspiring software engineer with a growing skill set in C++, Python, HTML, CSS, and Dart.
                 I have a solid foundation in data structures and algorithms, and enjoy building clean, scalable,
@@ -59,8 +59,15 @@
                 Alongside development, I explore creative areas like video editing, motion graphics, and 3D modeling,
                 which help me bring a fresh perspective to tech projects. I'm eager to contribute to meaningful work,
                 collaborate with others, and keep learning along the way.
-            </p>
-            <h2>Skills</h2>
+            </p></div>
+            <div class="skills_sec">
+                <h2>Skills</h2>
+                <!-- <p>
+                    I have a diverse skill set that includes web and app development, programming, and design.
+                    My expertise spans HTML, CSS, Flutter, Dart, C++, Python, JavaScript, After Effects, Figma,
+                    Photoshop, and Blender. I enjoy combining technical skills with creative design to build engaging
+                    and user-friendly applications.
+                </p> -->
             <h3>Development | Web and App </h3>
             <br>
             <div class="cards">
@@ -167,6 +174,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
             <br>
             <h2>Projects</h2>
