--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             Contact me
         </div>
         <div class="sm_logo">
-            <div class="github_logo">
-            </div>
-            <div class="linkedin_logo">
-            </div>
-            <div class="x_logo">
-            </div>
+           <a href="https://github.com/Shourya523" target="_blank"> <div class="github_logo">
+            </div></a>
+            <a href="https://www.linkedin.com/in/shourya-singh-297297358/" target="_blank"><div class="linkedin_logo">
+            </div></a>
+            <a href="https://x.com/skullcrusher412" target="_blank"><div class="x_logo">
+            </div></a>
         </div>
     </div>
     <div class="main_body">
@@ -198,12 +198,17 @@
                 reach out!
 
                 <h3>Email:</h3> <a href="mailto:shourya124sensei@gmail.com">shourya124sensei@gmail.com</a>
-                <h3>LinkedIn:</h3><a href="https://www.linkedin.com/in/shourya-singh-297297358/">linkedin.com/in/shourya-singh-297297358/</a>
-                <h3>GitHub:</h3> <a href="https://github.com/Shourya523">github.com/Shourya523</a> 
+                <h3>LinkedIn:</h3><a
+                    href="https://www.linkedin.com/in/shourya-singh-297297358/" target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
+                <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
                 <br>
                 <h3>Let’s connect and build something great together</h3>
             </div>
             <br>
+            <p style="text-align: center; font-size: 0.95em; color: #555;">
+                Made with <span style="color: red;">❤️</span> by <strong>Shourya</strong>
+            </p>
+
         </div>
     </div>
 
