--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     href="https://www.linkedin.com/in/shourya-singh-297297358/" target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
                 <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
                 <br>
-                <h3>Let’s connect and build something great together</h3>
+                <h3 style="text-align: center;">Let’s <a href="mailto:shourya124sensei@gmail.com">connect</a> and <a href="https://github.com/Shourya523">build</a> something great together</h3>
             </div>
             <br>
             <p style="text-align: center; font-size: 0.95em; color: #555;">
