--- a/index.html
+++ b/index.html
@@ -18,25 +18,37 @@
         <div class="dp">
 
         </div>
-        <div class="about_me">
-            About Me
-        </div>
-        <div class="skills">
-            Skills
-        </div>
-        <div class="projects">
-            Projects
-        </div>
-        <div class="contact_me">
-            Contact me
-        </div>
+        <!-- <nav class="nav_links"> -->
+        <a href="#about">
+            <div class="about_me">About Me</div>
+        </a>
+
+        <a href="#skill_id">
+            <div class="skills">Skills</div>
+        </a>
+
+        <a href="#proj_id">
+            <div class="projects">Projects</div>
+        </a>
+
+        <a href="#contact_id">
+            <div class="contact_me">Contact me</div>
+        </a>
+
+        <!-- </nav> -->
         <div class="sm_logo">
-           <a href="https://github.com/Shourya523" target="_blank"> <div class="github_logo">
-            </div></a>
-            <a href="https://www.linkedin.com/in/shourya-singh-297297358/" target="_blank"><div class="linkedin_logo">
-            </div></a>
-            <a href="https://x.com/skullcrusher412" target="_blank"><div class="x_logo">
-            </div></a>
+            <a href="https://github.com/Shourya523" target="_blank">
+                <div class="github_logo">
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/in/shourya-singh-297297358/" target="_blank">
+                <div class="linkedin_logo">
+                </div>
+            </a>
+            <a href="https://x.com/skullcrusher412" target="_blank">
+                <div class="x_logo">
+                </div>
+            </a>
         </div>
     </div>
     <div class="main_body">
@@ -50,160 +62,169 @@
         <br>
         <br>
         <div class="introduction">
-            <div class="abt_me_sec">
-                <h2>About Me</h2>
-                <p>
-                    I'm an aspiring software engineer with a growing skill set in C++, Python, HTML, CSS, and Dart.
-                    I have a solid foundation in data structures and algorithms, and enjoy building clean, scalable,
-                    and efficient solutions to real-world problems.
-                    <br><br>
-                    Alongside development, I explore creative areas like video editing, motion graphics, and 3D
-                    modeling,
-                    which help me bring a fresh perspective to tech projects. I'm eager to contribute to meaningful
-                    work,
-                    collaborate with others, and keep learning along the way.
-                </p>
-            </div>
-            <div class="skills_sec">
-                <h2>Skills</h2>
-                <!-- <p>
+            <section id="about">
+                <div class="abt_me_sec">
+                    <h2>About Me</h2>
+                    <p>
+                        I'm an aspiring software engineer with a growing skill set in C++, Python, HTML, CSS, and Dart.
+                        I have a solid foundation in data structures and algorithms, and enjoy building clean, scalable,
+                        and efficient solutions to real-world problems.
+                        <br><br>
+                        Alongside development, I explore creative areas like video editing, motion graphics, and 3D
+                        modeling,
+                        which help me bring a fresh perspective to tech projects. I'm eager to contribute to meaningful
+                        work,
+                        collaborate with others, and keep learning along the way.
+                    </p>
+                </div>
+            </section>
+            <section id="skill_id">
+                <div class="skills_sec">
+                    <h2>Skills</h2>
+                    <!-- <p>
                     I have a diverse skill set that includes web and app development, programming, and design.
                     My expertise spans HTML, CSS, Flutter, Dart, C++, Python, JavaScript, After Effects, Figma,
                     Photoshop, and Blender. I enjoy combining technical skills with creative design to build engaging
                     and user-friendly applications.
                 </p> -->
-                <h3>Development | Web and App </h3>
-                <br>
-                <div class="cards">
-                    <div class="card1">
-                        <div class="html_logo"><br>
-                            <div class="html_name">
-                                HTML
+                    <h3>Development | Web and App </h3>
+                    <br>
+                    <div class="cards">
+                        <div class="card1">
+                            <div class="html_logo"><br>
+                                <div class="html_name">
+                                    HTML
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card2">
+                            <div class="css_logo">
+                                <br>
+                                <div class="css_name">
+                                    CSS
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card3">
+                            <div class="flutter_logo">
+                                <br>
+                                <div class="flutter_name">
+                                    Flutter
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card4">
+                            <div class="dart_logo">
+                                <br>
+                                <div class="dart_name">
+                                    Dart
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card2">
-                        <div class="css_logo">
-                            <br>
-                            <div class="css_name">
-                                CSS
+                    <br>
+                    <h3>Programming</h3>
+                    <div class="cards2">
+
+                        <div class="card5">
+                            <div class="cpp_logo">
+                                <br>
+                                <div class="cpp_name">
+                                    C++
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card6">
+                            <div class="c_logo">
+                                <br>
+                                <div class="c_name">
+                                    C
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card7">
+                            <div class="python_logo">
+                                <br>
+                                <div class="python_name">
+                                    Python
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card8">
+                            <div class="js_logo">
+                                <br>
+                                <div class="js_name">
+                                    JS
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card3">
-                        <div class="flutter_logo">
-                            <br>
-                            <div class="flutter_name">
-                                Flutter
+                    <br>
+                    <h3>Design | VFX & 3D </h3>
+                    <div class="cards3">
+                        <div class="card9">
+                            <div class="ae_logo"><br>
+                                <div class="ae_name">
+                                    After Effects
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card4">
-                        <div class="dart_logo">
-                            <br>
-                            <div class="dart_name">
-                                Dart
+                        <div class="card10">
+                            <div class="pr_logo">
+                                <br>
+                                <div class="pr_name">
+                                    Figma
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card11">
+                            <div class="ps_logo">
+                                <br>
+                                <div class="ps_name">
+                                    Photoshop
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card12">
+                            <div class="blender_logo">
+                                <br>
+                                <div class="blender_name">
+                                    Blender
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <br>
-                <h3>Programming</h3>
-                <div class="cards2">
+            </section>
+            <section id="proj_id">
+                <div class="proj_sec">
+                    <h2>Projects</h2>
+                    <h3>Jarvis-like Chatbot | Python, TTS</h3>
+                    Built a voice-interactive AI assistant using speech recognition and text-to-speech
 
-                    <div class="card5">
-                        <div class="cpp_logo">
-                            <br>
-                            <div class="cpp_name">
-                                C++
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card6">
-                        <div class="c_logo">
-                            <br>
-                            <div class="c_name">
-                                C
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card7">
-                        <div class="python_logo">
-                            <br>
-                            <div class="python_name">
-                                Python
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card8">
-                        <div class="js_logo">
-                            <br>
-                            <div class="js_name">
-                                JS
-                            </div>
-                        </div>
-                    </div>
+                    <h3>Hand Sign Detection | C++, OpenCV</h3>
+                    Real-time gesture recognition system using computer vision techniques
+
+                    <h3>Freelance Video Editor | Remote</h3>
+                    Delivered 200+ videos for clients; 1.7L+ views; used Blender for 3D-integrated tech promos
                 </div>
-                <br>
-                <h3>Design | VFX & 3D </h3>
-                <div class="cards3">
-                    <div class="card9">
-                        <div class="ae_logo"><br>
-                            <div class="ae_name">
-                                After Effects
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card10">
-                        <div class="pr_logo">
-                            <br>
-                            <div class="pr_name">
-                                Figma
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card11">
-                        <div class="ps_logo">
-                            <br>
-                            <div class="ps_name">
-                                Photoshop
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card12">
-                        <div class="blender_logo">
-                            <br>
-                            <div class="blender_name">
-                                Blender
-                            </div>
-                        </div>
-                    </div>
+            </section>
+            <section id="contact_id">
+                <div class="con_sec">
+                    <h2>Contact Me</h2>
+                    I'm always open to discussing new projects, collaborations, or opportunities to be part of something
+                    creative. Whether you have a question, a freelance request, or just want to say hello — feel free to
+                    reach out!
+
+                    <h3>Email:</h3> <a href="mailto:shourya124sensei@gmail.com">shourya124sensei@gmail.com</a>
+                    <h3>LinkedIn:</h3><a href="https://www.linkedin.com/in/shourya-singh-297297358/"
+                        target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
+                    <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
+                    <br>
+                    <h3 style="text-align: center;">Let’s <a href="mailto:shourya124sensei@gmail.com">connect</a> and <a
+                            href="https://github.com/Shourya523">build</a> something great together</h3>
                 </div>
-            </div>
-            <div class="proj_sec">
-                <h2>Projects</h2>
-                <h3>Jarvis-like Chatbot | Python, TTS</h3>
-                Built a voice-interactive AI assistant using speech recognition and text-to-speech
-
-                <h3>Hand Sign Detection | C++, OpenCV</h3>
-                Real-time gesture recognition system using computer vision techniques
-
-                <h3>Freelance Video Editor | Remote</h3>
-                Delivered 200+ videos for clients; 1.7L+ views; used Blender for 3D-integrated tech promos
-            </div>
-            <div class="con_sec">
-                <h2>Contact Me</h2>
-                I'm always open to discussing new projects, collaborations, or opportunities to be part of something
-                creative. Whether you have a question, a freelance request, or just want to say hello — feel free to
-                reach out!
-
-                <h3>Email:</h3> <a href="mailto:shourya124sensei@gmail.com">shourya124sensei@gmail.com</a>
-                <h3>LinkedIn:</h3><a
-                    href="https://www.linkedin.com/in/shourya-singh-297297358/" target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
-                <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
-                <br>
-                <h3 style="text-align: center;">Let’s <a href="mailto:shourya124sensei@gmail.com">connect</a> and <a href="https://github.com/Shourya523">build</a> something great together</h3>
-            </div>
+            </section>
             <br>
             <p style="text-align: center; font-size: 0.95em; color: #555;">
                 Made with <span style="color: red;">❤️</span> by <strong>Shourya</strong>
