--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                 </p> -->
                     <h3>Development | Web and App </h3>
                     <br>
+                    <div class="mobile_info_skills">
+                        HTML | CSS | Flutter | Dart 
+                    </div>
                     <div class="cards">
                         <div class="card1">
                             <div class="html_logo"><br>
@@ -125,6 +128,10 @@
                     </div>
                     <br>
                     <h3>Programming</h3>
+                    <br>
+                    <div class="mobile_info_skills">
+                         C++ | C | Python | JS 
+                    </div>
                     <div class="cards2">
 
                         <div class="card5">
@@ -162,6 +169,10 @@
                     </div>
                     <br>
                     <h3>Design | VFX & 3D </h3>
+                    <br>
+                    <div class="mobile_info_skills">
+                        After Effects | Figma | Photoshop | Blender
+                    </div>
                     <div class="cards3">
                         <div class="card9">
                             <div class="ae_logo"><br>
