--- a/index.html
+++ b/index.html
@@ -67,15 +67,14 @@
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
                     <p>
-                        I'm an aspiring software engineer with a growing skill set in C++, Python, HTML, CSS, and Dart.
-                        I have a solid foundation in data structures and algorithms, and enjoy building clean, scalable,
-                        and efficient solutions to real-world problems.
+                        Aspiring software engineer 🚀 skilled in C++, Python, HTML, CSS & Dart 💻
+                        I have a solid foundation in data structures and algorithms 🧠, and I enjoy building clean,
+                        scalable ⚙️,
+                        and efficient 🚀 solutions to real-world problems.
                         <br><br>
-                        Alongside development, I explore creative areas like video editing, motion graphics, and 3D
-                        modeling,
-                        which help me bring a fresh perspective to tech projects. I'm eager to contribute to meaningful
-                        work,
-                        collaborate with others, and keep learning along the way.
+                        Alongside development 💻, I explore creative areas like video editing 🎬, motion graphics ✨, and
+                        3D modeling 🧊,
+                        which help me bring a fresh perspective 🌈 to tech projects.
                     </p>
                 </div>
             </section>
@@ -91,7 +90,7 @@
                     <h3>Development | Web and App </h3>
                     <br>
                     <div class="mobile_info_skills">
-                        HTML | CSS | Flutter | Dart 
+                        HTML | CSS | Flutter | Dart
                     </div>
                     <div class="cards">
                         <div class="card1">
@@ -130,7 +129,7 @@
                     <h3>Programming</h3>
                     <br>
                     <div class="mobile_info_skills">
-                         C++ | C | Python | JS 
+                        C++ | C | Python | JS
                     </div>
                     <div class="cards2">
 
