--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <br>
         <br>
         <div class="introduction">
+            <div class="name_height_limit">Shourya Singh</div>
+            <div class="degree_height_limit"> Aspiring Developer | B.Tech - IT 2<sup>nd</sup> Year</div>
             <section id="about">
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
