--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
             Aspiring Developer | B.Tech - IT 2<sup>nd</sup> Year
         </div>
         <br>
-        <br>
+        <div class="space_removable"><br></div>
         <div class="introduction">
-            <div class="name_height_limit">Shourya Singh</div>
-            <div class="degree_height_limit"> Aspiring Developer | B.Tech - IT 2<sup>nd</sup> Year</div>
             <section id="about">
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
