--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
                     <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
                     <br>
-                    <div class="space_removable"><br></div>
+                    <div class="space_removable2"><br></div>
                     <h3 style="text-align: center;">Let’s <a href="mailto:shourya124sensei@gmail.com">connect</a> and <a
                             href="https://github.com/Shourya523">build</a> something great together</h3>
                 </div>
