Dark mode toggle

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     <div class="main_body">
         <div class="name">
+            <button class="dark_mode_toggle"></button>
             Shourya Singh
         </div>
         <!-- <br> -->
@@ -238,12 +239,13 @@
                 </div>
             </section>
             <br>
-            <p style="text-align: center; font-size: 0.95em; color: #555;">
+            <p class="trademark" style="text-align: center; font-size: 0.95em; color: #555;">
                 Made with <span style="color: red;">❤️</span> by <strong>Shourya</strong>
             </p>
 
         </div>
     </div>
+    <script src="script.js"></script>
 
 </body>
 
